# heimaai

./: .gitignore  app_config.py  app_file_uploader.py  knowledge_base.py  main.py  pyproject.toml  vector_stores.py
agent_demo/: app.py  md5.text
agent_demo/agent/: react_agent.py
agent_demo/agent/tools/: agent_tools.py  middleware.py
agent_demo/config/: agent.yml  prompts.yml
agent_demo/model/: factory.py
agent_demo/rag/: rag_service.py  vector_store.py
agent_demo/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
data/: md5.txt  尺码推荐.txt  洗涤养护.txt  颜色选择.txt
rag_demo/: app_config.py  app_qa.py  file_history_store.py  knowledge_base.py  rag.py  vector_stores.py
rag_demo/chat_history/: user_001
rag_demo/data/: md5.txt  颜色选择.txt
