[project]
name = "heimaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dashscope>=1.25.10",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "openai>=2.16.0",
    "ruff>=0.15.0",
    "streamlit>=1.54.0",
]
